<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/content_detail"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_title" >

        <TextView
            android:id="@+id/content_name"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_margin="1dip"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/content_name" />

        <TextView
            android:id="@+id/content_value"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_below="@id/content_name"
            android:layout_margin="1dip"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/content_value" />

        <TextView
            android:id="@+id/content_other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_value"
            android:layout_margin="1dip"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/content_other" />
    </RelativeLayout>

    <TextView
        android:id="@+id/content_remark_txt"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:layout_below="@id/layout1"
        android:layout_margin="1dip"
        android:layout_marginLeft="10dip"
        android:gravity="left|center_vertical"
        android:text="@string/content_remark" />

    <EditText
        android:id="@+id/detail_content"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_below="@id/content_remark_txt"
        android:layout_marginTop="10dip"
        android:hint=""
        android:lines="20" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dip"
            android:layout_height="60dip"
            android:layout_margin="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="2"
            android:background="@color/black"
            android:text="@string/delete"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dip"
            android:layout_height="60dip"
            android:layout_margin="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="3"
            android:background="@color/black"
            android:text="@string/back"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>