<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MotifyPwd" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/motifypwd_txt"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/original_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginTop="50dip"
        android:hint="@string/originaltip"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/original_password"
        android:layout_marginTop="50dip"
        android:hint="@string/newtip"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/motify_btn"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="#ff000000"
        android:text="@string/motifypwd_txt"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

</RelativeLayout>